--- a/project.config.json
+++ b/project.config.json
@@ -26,7 +26,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 8,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -47,10 +47,10 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 3,
 					"name": "detail",
 					"pathName": "pages/detail/detail",
-					"query": ""
+					"query": "id=24"
 				},
 				{
 					"id": -1,
@@ -86,6 +86,12 @@
 					"id": -1,
 					"name": "article",
 					"pathName": "pages/article/article",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "index",
+					"pathName": "pages/index/index",
 					"query": ""
 				}
 			]
