--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
-	"appid": "wx19afb796cba063c0",
-	"projectname": "airclean_xcx_new",
+	"appid": "wx0d383ab85333cb04",
+	"projectname": "airclean_xcx_offical",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
@@ -26,7 +26,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
