--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "pages/article/article",
 
     "pages/detail/detail",
-    "pages/collect/collect"
+    "pages/collect/collect",
+    "pages/order/order"
   ],
   "window":{
     "backgroundTextStyle":"light",
