--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
 	"appid": "wx0d383ab85333cb04",
-	"projectname": "airclean_xcx_offical",
+	"projectname": "airclean",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
