--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 19,
+			"current": 4,
 			"list": [
 				{
 					"id": 0,
@@ -162,6 +162,18 @@
 					"id": -1,
 					"name": "测试",
 					"pathName": "pages/test/demo",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "申明",
+					"pathName": "pages/my/autharticle",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "发布帖子",
+					"pathName": "pages/post/post",
 					"query": ""
 				}
 			]
